# ociswap-migrations

./: Cargo.toml  README.md
dummy_account/: Cargo.toml
manifests/: create_owner_badge.rtm  create_token.rtm
migration/: Cargo.toml
migration/dummy_account/: Cargo.toml
migration/dummy_account/src/: lib.rs
migration/manifests/: create_token.rtm
migration/src/: lib.rs
migration/tests/: helper.rs
src/: lib.rs
tests/: lib.rs
token-migration/src/: lib.rs
token-migration/tests/: helper.rs
token_migration/: Cargo.toml
token_migration/manifests/: create_owner_badge.rtm
token_migration/tests/: helper.rs  lib.rs
tokens/src/: lib.rs
tokens/tests/: helper.rs  lib.rs
